Database and configuration cleanups:
    * Added a `manage.py` script with database reset, Google Drive sync, and note submission commands.
    * Added a `list-schema` command to `manage.py` for inspecting the database schema.
    * Added a link to the upload page on the index page.
    * Implemented note updating functionality based on existing titles.
    * Migrated to SQLAlchemy for database interactions, replacing previous SQLite code.
    * Reorganized and simplified note creation, metadata handling, and parsing logic within database module.
    * Consolidated note metadata into the Note model.
    * Extracted database settings to config.py.
    * Improved note loading process and updated template to directly use Note attributes.
    * Removed redundant date parameters during note creation and standardized on `created_at`.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,12 @@ dependencies = [
     "beautifulsoup4>=4.12.3",
     "graphviz>=0.20.3",
     "pydantic-settings>=2.7.0",
+    "sqlalchemy>=2.0.36",
+    "psycopg>=3.2.3",
+    "alembic>=1.14.0",
+    "psycopg-binary>=3.2.3",
+    "sqlalchemy-utils>=0.41.2",
+    "mypy>=1.14.0",
 ]
 
 [build-system]
