Refactoring to support markdown for the demo app.
1. Added wikilink processing for [[tag]] syntax in notes
2. Update note saving/parsing.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ dependencies = [
     "sqlalchemy-utils>=0.41.2",
     "mypy>=1.14.0",
     "tenacity>=9.0.0",
+    "pyyaml>=6.0.2",
+    "markdown-it-py[plugins]>=3.0.0",
 ]
 
 [build-system]
